# netbox-nornir-graphql-webinar

./: .env-example  Makefile  README.md  pyproject.toml  requirements.txt
demo/: config.py  nr_build_w_graphql.py  query_graphql.py  runbook.md
demo/rendered/: leaf1.txt  leaf2.txt  leaf3.txt  leaf4.txt  leaf5.txt  leaf6.txt  spine1.txt  spine2.txt
demo/templates/: device.j2
